koki-iwaizumi/jinto:1.0.0

--- a/jinto.yaml
+++ b/jinto.yaml
@@ -513,7 +513,7 @@ components:
     Messages:
       type: object
       properties:
-        message:
+        messages:
           type: array
           items:
             type: string
