koki-iwaizumi/jinto:1.0.0

--- a/jinto.yaml
+++ b/jinto.yaml
@@ -571,6 +571,9 @@ components:
           $ref: '#/components/schemas/Uuid'
         status:
           $ref: '#/components/schemas/Status'
+        memo:
+          type: string
+          example: "memo"
         alert:
           type: array
           items:
