koki-iwaizumi/jinto:1.0.0

--- a/jinto.yaml
+++ b/jinto.yaml
@@ -115,7 +115,7 @@ paths:
               example:
                 messages:
                   - "invalid request"
-                modules: []
+                modules: null
     post:
       tags:
         - module
