koki-iwaizumi/jinto:1.0.0

--- a/jinto.yaml
+++ b/jinto.yaml
@@ -178,7 +178,7 @@ paths:
               example:
                 messages:
                   - "invalid request"              
-                alertemails: []
+                alertemails: null
     post:
       tags:
         - alertemail
