--- a/jinto.yaml
+++ b/jinto.yaml
@@ -280,6 +280,8 @@ paths:
                 per_page: 0
                 uuid: ""
                 parameter: ""
+                to: ""
+                from: ""
                 datalogs: null
         "404":
           description: 指定されたuuidがありません。
@@ -295,6 +297,8 @@ paths:
                 per_page: 0
                 uuid: ""
                 parameter: ""
+                to: ""
+                from: ""
                 datalogs: null
   /alertlog:
     get:
@@ -331,6 +335,8 @@ paths:
                 per_page: 0
                 uuid: ""
                 parameter: ""
+                to: ""
+                from: ""
                 alertlogs: null
         "404":
           description: 指定されたuuidがありません。
@@ -346,6 +352,8 @@ paths:
                 per_page: 0
                 uuid: ""
                 parameter: ""
+                to: ""
+                from: ""
                 alertlogs: null
   /webhook:
     get:
@@ -617,9 +625,8 @@ components:
               example: "上限"
               enum: ["上限","下限"]
             limitvalue:
-              type: number
-              example: 10.0
-              format: double
+              type: string
+              example: "10.0"
     AlertlogSet:
       allOf:
         - $ref: '#/components/schemas/Messages'
@@ -639,11 +646,11 @@ components:
                 - value: 80.65487
                   gettime: "2019-06-02T10:56:42"
                   limitstatus: "上限"
-                  limitvalue: 80.0
+                  limitvalue: "80.0"
                 - value: -1.59875
                   gettime: "2019-06-05T02:14:10"
                   limitstatus: "下限"
-                  limitvalue: 0.0
+                  limitvalue: "0.0"
     Webhook:
       type: object
       properties:
