--- a/jinto.yaml
+++ b/jinto.yaml
@@ -477,7 +477,35 @@ paths:
               example:
                 messages:
                   - "not found url"
-
+  /webhook/datatest:
+    post:
+      tags:
+        - webhook
+      summary: webhookのデータ受信時 テスト送信
+      description: 登録したwebhookで、ステータスが有効なもの、かつ、イベント条件がデータ受信時なものにテスト送信します。正常にテスト送信が終了するとStatusCodeが200で返ってきます。
+      parameters:
+        - $ref: '#/components/parameters/Token'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Messages'
+              example:
+                messages:
+                  - "info@jinto.cloud: メール送信に成功しました。"
+                  - "test finish"
+        "400":
+          description: 不正なリクエストです。
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Messages'
+              example:
+                messages:
+                  - "invalid request"  
+                  
 components:
   schemas:
     Messages:
